...
            <objects>
                <viewController storyboardIdentifier="LocationViewController" id="BYZ-38-t0r" customClass="LocationViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="4tf-3c-vV1">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="или" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yjE-mt-zZe">
                                <rect key="frame" x="147.5" y="253" width="25" height="17"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <connections>
                                    <action selector="geolocationButtonAction" destination="BYZ-38-t0r" eventType="touchUpInside" id="4GP-l5-LOR"/>
                                </connections>
                            </button>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bwD-ba-ujJ">
                                <rect key="frame" x="137.5" y="362" width="45" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="NextButton"/>
                                <state key="normal" title="Далее">
                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="nextButtonAction" destination="BYZ-38-t0r" eventType="touchUpInside" id="mvk-sk-IOc"/>
                                </connections>
...
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="line" placeholder="Введите город" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pe0-Hb-Lnw">
                                <rect key="frame" x="76" y="205" width="168" height="36"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="CityTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="168" id="EGX-7O-fti"/>
                                    <constraint firstAttribute="height" constant="36" id="YiH-O0-aam"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="search"/>
...
